--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,12 @@
     width: 100%;
     margin: 0 auto;
 }
+.header {
+    display: flex;
+    width: 1440px;
+    align-items: center;
+    justify-content: space-between;
+    img {
+        width: 200px;
+    }
+}
